Update to version 1.5